--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -16,6 +16,6 @@
   </servlet>
   <servlet-mapping>
   	<servlet-name>ServletAdaptor</servlet-name>
-    <url-pattern>/tranquitronco/*</url-pattern>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
 </web-app>
